# Brava

./: ARCHITECTURE.md  CLAUDE.md  CURSOR_PROMPT.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  hotkeys.rs  layout.rs  mod.rs  prompts.rs  screenshot.rs  settings.rs  snippets.rs  transcription.rs
src-tauri/src/engine/: clipboard.rs  detector.rs  hotkeys.rs  layout.rs  macos_keys.rs  mod.rs  snippets.rs
src-tauri/src/layouts/: arabic.rs  english.rs  hebrew.rs  mod.rs  russian.rs
src-tauri/src/storage/: database.rs  settings.rs
src-tauri/tray-icon-patched/src/platform_impl/macos/: mod.rs
src-tauri/tray-icon-patched/src/platform_impl/windows/: mod.rs
src/components/: AITools.tsx  ClipboardHistory.tsx  ErrorBoundary.tsx  KeyboardLock.tsx  LayoutConverter.tsx  Onboarding.tsx  QuickPaste.tsx  ScreenshotEditor.tsx  Settings.tsx  SnippetManager.tsx  Toast.tsx  Transcription.tsx  UniversalSearch.tsx  WhatsNew.tsx  WrongLayoutPopup.tsx
src/hooks/: useTauriCommand.ts
src/lib/: i18n.ts  sounds.ts  tauri.ts
src/styles/: app.css  theme.css
(+7 files in other folders)
