[package]
name = "brava"
version = "0.1.0"
description = "Cross-platform productivity toolkit - smart layout conversion, clipboard, AI tools"
authors = ["Brava Team"]
edition = "2021"

[lib]
name = "brava_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
regex = "1"
tauri-plugin-global-shortcut = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2"
urlencoding = "2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }
